# dockspace

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dms-info.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: gunicorn.conf.py  pyproject.toml
backend/config/: settings.py  urls.py
backend/dockspace/: README.md  __init__.py  admin.py  apps.py  tests.py
backend/dockspace/api/: __init__.py  audit.py  audit_helpers.py  auth.py  decorators.py  mail.py  mail.py.backup  mail_client.py  notifications.py  oidc.py  profile.py  sessions.py  settings.py  totp.py
backend/dockspace/core/: __init__.py  mail_client.py  models.py  session_tracker.py  views.py
backend/dockspace/integrations/: __init__.py  dms_export.py  hooks.py  signals.py  userinfo.py
backend/dockspace/management/commands/: export_dms_files.py  scan_dms_files.py  set_mail_password.py  test_oidc_flow.py
backend/dockspace/migrations/: 0002_clientaccess_require_2fa.py  0003_mailaccount_status.py  0004_alter_mailaccount_picture.py  0005_alter_mailaccount_last_name.py  0006_mailgroup_timestamps.py  0007_appsettings_allow_registration.py  0008_auditlog.py  0009_totpdevice_usersession_and_more.py
backend/dockspace/security/: __init__.py  auth_backend.py  middleware.py  validators.py
backend/dockspace/templates/oidc_provider/: authorize.html
config/: settings.py  urls.py
dockspace/: admin.py  apps.py  auth_backend.py  dms_export.py  forms.py  hooks.py  middleware.py  models.py  signals.py  urls.py  userinfo.py  validators.py  views.py
frontend/: BUILD.md  (+5 more)
(+99 files in other folders)
